Updated events page logic for easier event addition - Updated event card mapping to display recent events first - Added the latest event to the events page, media gallery, and carousel - Fixed z-index layering issue for the map - Updated tag line for Aditya Kumar Jha in teams page

--- a/src/components/CompCss/MediaGallery.css
+++ b/src/components/CompCss/MediaGallery.css
@@ -34,8 +34,8 @@
   border: 1px solid #ddd;
 }
 
-/* Specific styling for the 6th image */
-.sixth-image {
+/* Specific styling for image not in proper ratio */
+.improper-size-image {
   aspect-ratio: 16 / 9; /* Adjusts aspect ratio for a wider image */
 }
 
